--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p>Apasionado por la creación de aplicaciones web y el aprendizaje de nuevas tecnologías. En busca de oportunidades para crecer y contribuir a proyectos innovadores.</p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#stack" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Descargar CV</a>
+                          <a href="https://github.com/user-attachments/files/17125842/cv.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Descargar CV</a>
                           <a href="#skills" class="btn custom-btn custom-btn-bg custom-btn-link">Skills</a>
                         </div>
                     </div>
